--- a/conversor_binario_hexadecimal.html
+++ b/conversor_binario_hexadecimal.html
@@ -51,6 +51,7 @@
                     <li class="nav-item"><a class="nav-link" href="linux_cheatsheet.html">Linux</a></li>
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link active" href="conversor_binario_hexadecimal.html">Conversor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
                 </ul>
             </div>
         </div>
@@ -114,7 +115,7 @@
     </div>
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p>© 2026 - Conversor interactivo</p>
+        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
     </footer>
 
     <script>
