--- a/guia_redes.html
+++ b/guia_redes.html
@@ -142,6 +142,7 @@
                     <li class="nav-item"><a class="nav-link" href="linux_cheatsheet.html">Linux</a></li>
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link" href="conversor_binario_hexadecimal.html">Conversor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
                 </ul>
             </div>
         </div>
@@ -680,8 +681,7 @@ Salto = 256 - último octeto de máscara
     </div>
 
     <footer>
-        <p>© 2026 - Guía de Redes · ASIR / Telecomunicaciones</p>
-        <p class="small">Actualizado con Debian 13 y Bootstrap 5</p>
+        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
     </footer>
 
     <!-- Script de la calculadora (el mismo de la versión anterior, adaptado) -->
