--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <li class="nav-item"><a class="nav-link" href="linux_cheatsheet.html">Linux</a></li>
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link" href="conversor_binario_hexadecimal.html">Conversor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
                 </ul>
             </div>
         </div>
@@ -96,11 +97,19 @@
                     <a href="conversor_binario_hexadecimal.html" class="btn btn-outline-primary mt-3">Acceder</a>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-database-gear fs-1"></i>
+                    <h3 class="mt-3">MySQL</h3>
+                    <p>Gestión de usuarios, permisos y vistas en MySQL.</p>
+                    <a href="MySQL.html" class="btn btn-outline-primary mt-3">Acceder</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <footer class="bg-dark text-white text-center py-4 mt-5">
-        <p>© 2026 - Guía ASIR | Actualizado con Debian 13</p>
+        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
