--- a/linux_cheatsheet.html
+++ b/linux_cheatsheet.html
@@ -94,6 +94,7 @@
                     <li class="nav-item"><a class="nav-link active" href="linux_cheatsheet.html">Linux</a></li>
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link" href="conversor_binario_hexadecimal.html">Conversor</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
                 </ul>
             </div>
         </div>
@@ -412,7 +413,7 @@ find /ruta -name "*.log" | xargs rm
     </div>
 
     <footer>
-        <p>© 2026 - Linux Cheatsheet · Basado en Debian 13 (Trixie)</p>
+        <p>Created by Jemarin Birt LH ASIR 2025 ^^</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
