--- a/conversor_binario_hexadecimal.html
+++ b/conversor_binario_hexadecimal.html
@@ -52,6 +52,7 @@
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link active" href="conversor_binario_hexadecimal.html">Conversor</a></li>
                     <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="dhcp_dns.html">DHCP/DNS</a></li>
                 </ul>
             </div>
         </div>
