--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <li class="nav-item"><a class="nav-link" href="virtualbox.html">VirtualBox</a></li>
                     <li class="nav-item"><a class="nav-link" href="conversor_binario_hexadecimal.html">Conversor</a></li>
                     <li class="nav-item"><a class="nav-link" href="MySQL.html">MySQL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="dhcp_dns.html">DHCP/DNS</a></li>
                 </ul>
             </div>
         </div>
@@ -103,6 +104,14 @@
                     <h3 class="mt-3">MySQL</h3>
                     <p>Gestión de usuarios, permisos y vistas en MySQL.</p>
                     <a href="MySQL.html" class="btn btn-outline-primary mt-3">Acceder</a>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="card h-100 p-4 text-center">
+                    <i class="bi bi-router fs-1"></i>
+                    <h3 class="mt-3">DHCP/DNS</h3>
+                    <p>Servidores DHCP y DNS en VirtualBox con múltiples SO.</p>
+                    <a href="dhcp_dns.html" class="btn btn-outline-primary mt-3">Acceder</a>
                 </div>
             </div>
         </div>
