--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Guía de Redes y Linux</title>
+    <title>Inicio - Source-IT</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -61,8 +61,8 @@
 
     <div class="container py-5">
         <div class="hero text-center mb-5">
-            <h1 class="display-4 fw-bold"><i class="bi bi-book"></i> Guía Completa de Redes y Linux</h1>
-            <p class="lead">Recursos para ASIR: subnetting, DHCP, DNS, comandos Linux, VirtualBox y más.</p>
+            <h1 class="display-4 fw-bold"><i class="bi bi-book"></i> SOURCE-IT My path by Jemarin</h1>
+            <p class="lead">Recursos para enfermos de informatica.</p>
         </div>
 
         <div class="row g-4">
