--- a/dhcp_dns.html
+++ b/dhcp_dns.html
@@ -6,23 +6,45 @@
     <title>Guía completa: Servidor DHCP y DNS en VirtualBox con múltiples SO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #0a4d68;
+            --secondary-color: #088395;
+            --accent-color: #05bfdb;
+        }
+        * {
+            font-family: 'Space Mono', monospace;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+        }
         /* Estilos del Navbar Neón */
         .navbar-neon {
             background: #0a0e27;
-            border-bottom: 2px solid #00ff88;
-            box-shadow: 0 0 20px rgba(0, 255, 136, 0.5);
-            padding: 1rem 0;
+            border-bottom: 3px solid #00ff88;
+            box-shadow: 0 0 30px rgba(0, 255, 136, 0.7), inset 0 0 20px rgba(0, 255, 136, 0.1);
+            padding: 0.8rem 0;
             transition: all 0.5s ease;
-        } {
-            font-family: 'Arial Black', sans-serif;
-            font-weight: bold;
-            font-size: 1.5rem;
-            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff);
+            backdrop-filter: blur(10px);
+        }
+        .neon-text {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            font-size: 1.8rem;
+            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff, #00ff88);
+            background-size: 200% 100%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
+            animation: wave-text-mega 3s ease-in-out infinite, gradient-shift 4s ease infinite;
+            letter-spacing: 0.1em;
+        }
+        /* Estilos del Navbar antiguo */
             filter: drop-shadow(0 0 10px #00ff88) drop-shadow(0 0 20px #00ccff);
             animation: wave-text 3s ease-in-out infinite;
         }
@@ -170,7 +192,125 @@
         .theme-btn:hover {
             background: rgba(0, 255, 136, 0.4) !important;
             text-shadow: 0 0 10px #00ff88;
-        }        :root {
+        }
+        /* BOTONES PERSONALIZADOS NEON */
+        .btn {
+            border: 2px solid;
+            border-radius: 8px;
+            font-weight: 700;
+            padding: 12px 28px !important;
+            font-size: 1.05rem;
+            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+            position: relative;
+            overflow: hidden;
+            letter-spacing: 0.05em;
+            margin: 8px 4px !important;
+            display: inline-block;
+            min-width: 140px;
+        }
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: inherit;
+            transition: left 0.3s ease;
+            z-index: -1;
+        }
+        .btn::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: transparent;
+            filter: drop-shadow(0 0 3px currentColor);
+        }
+        .btn-outline-primary {
+            color: #0080FF;
+            border-color: #0080FF;
+            background: transparent;
+        }
+        .btn-outline-primary:hover {
+            background: #0080FF;
+            color: #000;
+            border-color: #0080FF;
+            box-shadow: 0 0 20px rgba(0, 128, 255, 0.6), 
+                        inset 0 0 15px rgba(0, 128, 255, 0.3),
+                        0 0 40px rgba(0, 200, 255, 0.4);
+            transform: scale(1.08);
+        }
+        /* Temas de botones según el navbar */
+        .navbar-neon.rainbow .btn-outline-primary {
+            color: #00ff88;
+            border-color: #00ff88;
+        }
+        .navbar-neon.rainbow .btn-outline-primary:hover {
+            background: #00ff88;
+            color: #000;
+            border-color: #00ff88;
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.8), 
+                        inset 0 0 15px rgba(0, 255, 136, 0.5),
+                        0 0 40px rgba(0, 200, 255, 0.5);
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+        .navbar-neon.cyberpunk .btn-outline-primary {
+            color: #00CCFF;
+            border-color: #FF00FF;
+            animation: btn-glitch 2s infinite;
+        }
+        .navbar-neon.cyberpunk .btn-outline-primary:hover {
+            background: #FF00FF;
+            color: #00CCFF;
+            border-color: #00CCFF;
+            box-shadow: 0 0 20px #FF00FF, 0 4px 0 #00CCFF, 
+                        0 -4px 0 #FF00FF, -4px 0 0 #00CCFF, 4px 0 0 #FF00FF;
+        }
+        .navbar-neon.synthwave .btn-outline-primary {
+            color: #FFD60A;
+            border-color: #FF006E;
+        }
+        .navbar-neon.synthwave .btn-outline-primary:hover {
+            background: #FFD60A;
+            color: #000;
+            border-color: #FF006E;
+            box-shadow: 0 0 20px rgba(255, 214, 10, 0.8),
+                        0 0 40px rgba(255, 0, 110, 0.6),
+                        inset 0 0 15px rgba(255, 214, 10, 0.4);
+        }
+        .navbar-neon.holographic .btn-outline-primary {
+            color: #00ff88;
+            border-color: #00CCFF;
+            background: rgba(0, 255, 136, 0.05);
+        }
+        .navbar-neon.holographic .btn-outline-primary:hover {
+            background: linear-gradient(135deg, rgba(0, 255, 136, 0.3), rgba(0, 204, 255, 0.3));
+            color: #00CCFF;
+            border-color: #00CCFF;
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.6),
+                        inset 0 0 20px rgba(0, 204, 255, 0.4),
+                        0 0 40px rgba(255, 0, 255, 0.3);
+        }
+        .navbar-neon.plasma .btn-outline-primary {
+            color: #FF00FF;
+            border-color: #00FF88;
+        }
+        .navbar-neon.plasma .btn-outline-primary:hover {
+            background: #00FF88;
+            color: #000;
+            border-color: #FF00FF;
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.8),
+                        0 0 40px rgba(0, 255, 136, 0.6),
+                        inset 0 0 15px rgba(0, 255, 136, 0.5);
+        }
+        @keyframes btn-glitch {
+            0%, 100% { transform: translateX(0); }
+            20% { transform: translateX(-2px); }
+            40% { transform: translateX(2px); }
+            60% { transform: translateX(-2px); }
+            80% { transform: translateX(2px); }
+        }
+        :root {
             --primary-color: #0a4d68;
             --secondary-color: #088395;
             --accent-color: #05bfdb;
