--- a/linux_cheatsheet.html
+++ b/linux_cheatsheet.html
@@ -8,39 +8,58 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts - Fuentes futuristas -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-color: #0a4d68;
             --secondary-color: #088395;
             --accent-color: #05bfdb;
         }
+        * {
+            font-family: 'Space Mono', monospace;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+        }
         /* Estilos del Navbar Neón */
         .navbar-neon {
             background: #0a0e27;
-            border-bottom: 2px solid #00ff88;
-            box-shadow: 0 0 20px rgba(0, 255, 136, 0.5);
-            padding: 1rem 0;
+            border-bottom: 3px solid #00ff88;
+            box-shadow: 0 0 30px rgba(0, 255, 136, 0.7), inset 0 0 20px rgba(0, 255, 136, 0.1);
+            padding: 0.8rem 0;
             transition: all 0.5s ease;
-        } {
-            font-family: 'Arial Black', sans-serif;
-            font-weight: bold;
-            font-size: 1.5rem;
-            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff);
+            backdrop-filter: blur(10px);
+        }
+        .neon-text {
+            font-family: 'Orbitron', sans-serif;
+            font-weight: 900;
+            font-size: 1.8rem;
+            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff, #00ff88);
+            background-size: 200% 100%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            filter: drop-shadow(0 0 10px #00ff88) drop-shadow(0 0 20px #00ccff);
-            animation: wave-text 3s ease-in-out infinite;
+            filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
+            animation: wave-text-mega 3s ease-in-out infinite, gradient-shift 4s ease infinite;
+            letter-spacing: 0.1em;
+        }
+        @keyframes gradient-shift {
+            0%, 100% { background-position: 0% center; }
+            50% { background-position: 100% center; }
         }
         .nav-link-neon {
-            font-weight: 600;
+            font-weight: 700;
             position: relative;
             overflow: hidden;
             transition: all 0.3s ease;
-            margin: 0 10px;
+            margin: 0 12px;
             animation: rainbow-neon 4s ease-in-out infinite;
+            font-size: 1.05rem;
+            letter-spacing: 0.05em;
         }
         .nav-link-neon::before {
             content: '';
@@ -54,20 +73,20 @@
         }
         .nav-link-neon:hover {
             color: #00ccff !important;
-            text-shadow: 0 0 15px #00ccff, 0 0 30px #00ff88, 0 0 45px #ff00ff;
-            transform: scale(1.1);
+            text-shadow: 0 0 20px #00ccff, 0 0 40px #00ff88, 0 0 60px #ff00ff;
+            transform: scale(1.15) skewX(-5deg);
         }
         .nav-link-neon.active {
             color: #ff00ff !important;
-            text-shadow: 0 0 20px #ff00ff, 0 0 40px #00ff88;
-            border-bottom: 2px solid #ff00ff;
+            text-shadow: 0 0 25px #ff00ff, 0 0 50px #00ff88;
+            border-bottom: 3px solid #ff00ff;
         }
-        @keyframes wave-text {
+        @keyframes wave-text-mega {
             0%, 100% {
-                filter: drop-shadow(0 0 10px #00ff88) drop-shadow(0 0 20px #00ccff);
+                filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
             }
             50% {
-                filter: drop-shadow(0 0 20px #00ff88) drop-shadow(0 0 30px #ff00ff);
+                filter: drop-shadow(0 0 25px #00ff88) drop-shadow(0 0 40px #ff00ff);
             }
         }
         @keyframes wave-hover {
@@ -170,14 +189,170 @@
         }
         .theme-btn {
             background: rgba(0, 255, 136, 0.2) !important;
-            border: 1px solid #00ff88 !important;
+            border: 2px solid #00ff88 !important;
             color: #00ff88 !important;
             transition: all 0.3s ease;
-            font-size: 1.2rem;
+            font-size: 1.4rem;
+            padding: 0.5rem 0.8rem !important;
+            position: relative;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: theme-btn-pulse 2s ease-in-out infinite, theme-btn-rotate 8s linear infinite;
+            box-shadow: 0 0 15px rgba(0, 255, 136, 0.5), inset 0 0 10px rgba(0, 255, 136, 0.3);
+            overflow: hidden;
+        }
+        .theme-btn::before {
+            content: '';
+            position: absolute;
+            inset: -2px;
+            background: conic-gradient(#00ff88, #00ccff, #ff00ff, #ff006e, #ffd60a, #00ff88);
+            border-radius: 50%;
+            z-index: -1;
+            animation: theme-gradient-rotate 3s linear infinite;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .theme-btn:hover::before {
+            opacity: 1;
         }
         .theme-btn:hover {
             background: rgba(0, 255, 136, 0.4) !important;
-            text-shadow: 0 0 10px #00ff88;
+            text-shadow: 0 0 15px #00ff88, 0 0 30px #00ccff;
+            box-shadow: 0 0 30px rgba(0, 255, 136, 0.8), inset 0 0 15px rgba(0, 255, 136, 0.5), 0 0 40px rgba(255, 0, 255, 0.4);
+            transform: scale(1.15);
+        }
+        @keyframes theme-btn-pulse {
+            0%, 100% { box-shadow: 0 0 15px rgba(0, 255, 136, 0.5), inset 0 0 10px rgba(0, 255, 136, 0.3); }
+            50% { box-shadow: 0 0 30px rgba(0, 255, 136, 0.8), inset 0 0 15px rgba(0, 255, 136, 0.5); }
+        }
+        @keyframes theme-btn-rotate {
+            from { transform: rotateZ(0deg); }
+            to { transform: rotateZ(360deg); }
+        }
+        @keyframes theme-gradient-rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+        /* BOTONES PERSONALIZADOS NEON */
+        .btn {
+            border: 2px solid;
+            border-radius: 8px;
+            font-weight: 700;
+            padding: 12px 28px !important;
+            font-size: 1.05rem;
+            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+            position: relative;
+            overflow: hidden;
+            letter-spacing: 0.05em;
+            margin: 8px 4px !important;
+            display: inline-block;
+            min-width: 140px;
+        }
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: inherit;
+            transition: left 0.3s ease;
+            z-index: -1;
+        }
+        .btn::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: transparent;
+            filter: drop-shadow(0 0 3px currentColor);
+        }
+        .btn-outline-primary {
+            color: #0080FF;
+            border-color: #0080FF;
+            background: transparent;
+        }
+        .btn-outline-primary:hover {
+            background: #0080FF;
+            color: #000;
+            border-color: #0080FF;
+            box-shadow: 0 0 20px rgba(0, 128, 255, 0.6), 
+                        inset 0 0 15px rgba(0, 128, 255, 0.3),
+                        0 0 40px rgba(0, 200, 255, 0.4);
+            transform: scale(1.08);
+        }
+        /* Temas de botones según el navbar */
+        .navbar-neon.rainbow .btn-outline-primary {
+            color: #00ff88;
+            border-color: #00ff88;
+        }
+        .navbar-neon.rainbow .btn-outline-primary:hover {
+            background: #00ff88;
+            color: #000;
+            border-color: #00ff88;
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.8), 
+                        inset 0 0 15px rgba(0, 255, 136, 0.5),
+                        0 0 40px rgba(0, 200, 255, 0.5);
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+        .navbar-neon.cyberpunk .btn-outline-primary {
+            color: #00CCFF;
+            border-color: #FF00FF;
+            animation: btn-glitch 2s infinite;
+        }
+        .navbar-neon.cyberpunk .btn-outline-primary:hover {
+            background: #FF00FF;
+            color: #00CCFF;
+            border-color: #00CCFF;
+            box-shadow: 0 0 20px #FF00FF, 0 4px 0 #00CCFF, 
+                        0 -4px 0 #FF00FF, -4px 0 0 #00CCFF, 4px 0 0 #FF00FF;
+        }
+        .navbar-neon.synthwave .btn-outline-primary {
+            color: #FFD60A;
+            border-color: #FF006E;
+        }
+        .navbar-neon.synthwave .btn-outline-primary:hover {
+            background: #FFD60A;
+            color: #000;
+            border-color: #FF006E;
+            box-shadow: 0 0 20px rgba(255, 214, 10, 0.8),
+                        0 0 40px rgba(255, 0, 110, 0.6),
+                        inset 0 0 15px rgba(255, 214, 10, 0.4);
+        }
+        .navbar-neon.holographic .btn-outline-primary {
+            color: #00ff88;
+            border-color: #00CCFF;
+            background: rgba(0, 255, 136, 0.05);
+        }
+        .navbar-neon.holographic .btn-outline-primary:hover {
+            background: linear-gradient(135deg, rgba(0, 255, 136, 0.3), rgba(0, 204, 255, 0.3));
+            color: #00CCFF;
+            border-color: #00CCFF;
+            box-shadow: 0 0 20px rgba(0, 255, 136, 0.6),
+                        inset 0 0 20px rgba(0, 204, 255, 0.4),
+                        0 0 40px rgba(255, 0, 255, 0.3);
+        }
+        .navbar-neon.plasma .btn-outline-primary {
+            color: #FF00FF;
+            border-color: #00FF88;
+        }
+        .navbar-neon.plasma .btn-outline-primary:hover {
+            background: #00FF88;
+            color: #000;
+            border-color: #FF00FF;
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.8),
+                        0 0 40px rgba(0, 255, 136, 0.6),
+                        inset 0 0 15px rgba(0, 255, 136, 0.5);
+        }
+        @keyframes btn-glitch {
+            0%, 100% { transform: translateX(0); }
+            20% { transform: translateX(-2px); }
+            40% { transform: translateX(2px); }
+            60% { transform: translateX(-2px); }
+            80% { transform: translateX(2px); }
         }
         body {
             background: linear-gradient(135deg, #f5f7fa 0%, #e8eef3 100%);
